# doppler

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLI.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  Makefile  README.md  RESAMPLER.md  TODO.md  VENDORED.md  agc_step_response.csv  conftest.py  consumer.cf32  docker-compose.yml  install-deps.sh  jb.toml  jm-fix.patch  just-makeit.toml  mkdocs-capi.yml  mkdocs.yml  mypy.ini  pyproject.toml  rename.sh  requirements.txt  ruff.toml  rustfmt.toml  wavegen.py  zensical.toml
c/: CMakeLists.txt
c/bench/: bench_accumulator.c  bench_buffer.c  bench_ddc.c  bench_ddc_hb.c  bench_ddc_hb2.c  bench_fft.c  bench_fir.c  bench_hbdecim.c  bench_nco.c  bench_resamp.c  bench_resamp_dpmfs.c
c/cmake/: DopplerConfig.cmake.in  doppler.pc.in
c/cmake/licenses/: README_LICENSE
c/examples/: fft_demo.c  fir_demo.c  hbdecim_demo.c  nco_demo.c  pipeline_demo.c  receiver.c  simd_demo.c  spectrum_analyzer.c  transmitter.c
c/include/: doppler.h
c/include/dp/: accumulator.h  buffer.h  core.h  ddc.h  delay.h  fft.h  fir.h  hbdecim.h  nco.h  pocketfft.h  pocketfft_hdronly.h  resamp.h  resamp_dpmfs.h  simd.h  stream.h  util.h  window.h
c/src/: accumulator.c  core.c  ddc.c  delay.c  fft.c  fft_pocketfft.c  fir.c  hbdecim.c  nco.c  pocketfft.cc  resamp.c  resamp_dpmfs.c  simd.c  stream.c  util.c  window.c
c/tests/: fft_testbench.c  test_accumulator.c  test_ddc.c  test_delay.c  test_fir.c  test_hbdecim.c  test_install.sh  test_nco.c  test_resamp.c  test_resamp_dpmfs.c  test_stream.c  test_window.c  xmit_cf64.c
examples/c/: CMakeLists.txt  agc_demo.c  cic_demo.c  corr_demo.c  fft_demo.c  fir_demo.c  hbdecim_demo.c  nco_demo.c  pipeline_demo.c  rate_converter_demo.c  receiver.c  spectrum_analyzer.c  transmitter.c  wavegen.c
examples/consumer/: CMakeLists.txt  main.c
examples/standalone/: CMakeLists.txt  example.py  main.c
ffi/rust/: Cargo.toml  build.rs
ffi/rust/.cargo/: config.toml
ffi/rust/examples/: acc_demo.rs  fft_bench.rs  fft_demo.rs  nco_demo.rs  simd_demo.rs
ffi/rust/src/: acc.rs  fft.rs  fir.rs  lib.rs  lo.rs  nco.rs  types.rs  util.rs
ffi/rust/tests/: state.rs
native/src/HalfbandDecimator/: CMakeLists.txt  HalfbandDecimator_core.c
native/src/RateConverter/: CMakeLists.txt  RateConverter_core.c
native/src/Resampler/: CMakeLists.txt  Resampler_core.c
native/src/acc_cf64/: CMakeLists.txt  acc_cf64_core.c
native/src/acc_f32/: CMakeLists.txt  acc_f32_core.c
native/src/acc_q8/: CMakeLists.txt  acc_q8_core.c
native/src/accumulator/: CMakeLists.txt  accumulator_core.c  accumulator_ext.c  accumulator_ext_acc_cf64.c  accumulator_ext_acc_f32.c  accumulator_ext_acc_trace.c
native/src/acq/: CMakeLists.txt  acq_core.c
native/src/acquire/: CMakeLists.txt  acquire_core.c  acquire_ext.c  acquire_ext_carrier_acq.c
native/src/adc/: CMakeLists.txt  adc_core.c
native/src/agc/: CMakeLists.txt  agc_core.c  agc_ext.c  agc_ext_agc.c
native/src/analyzer/: CMakeLists.txt  analyzer_core.c  analyzer_ext.c  analyzer_ext_specan.c
native/src/arith/: CMakeLists.txt  add_q15.c  add_q8.c  arith_core.c  arith_ext.c  arith_ext_acc_q15.c  arith_ext_acc_q8.c  dot_q15.c  dot_q8.c  mul_q15.c  mul_q8.c  shl_i64.c  shl_q15.c  shl_q8.c  shr_i64.c  shr_q15.c  shr_q8.c  sub_q15.c  sub_q8.c
native/src/async_dsss_receiver/: CMakeLists.txt  async_dsss_receiver_core.c
native/src/awgn/: CMakeLists.txt  awgn_core.c
native/src/buffer/: CMakeLists.txt  buffer_ext.c
native/src/burst_acq/: CMakeLists.txt  burst_acq_core.c
native/src/burst_demod/: CMakeLists.txt  burst_demod_core.c
native/src/burst_despreader/: CMakeLists.txt  burst_despreader_core.c
native/validation/: CMakeLists.txt  ber_despreader.c  carrier_mpsk_jitter.c  carrier_mpsk_scurve.c  carrier_nda_pullin.c  carrier_nda_scurve.c  carrier_nda_step_response.c  costas_jitter.c  dll_jitter.c  mpsk_receiver_ber.c  symsync_lock.c
python/: CMakeLists.txt  Makefile  conftest.py
python/cli/: pyproject.toml
python/cli/doppler_cli/: __main__.py  compose.py  dopplerfile.py  ports.py  ps.py  source.py  state.py
python/cli/doppler_cli/blocks/: __init__.py  fir.py  specan.py  tone.py
python/cli/doppler_cli/tests/: test_blocks.py  test_compose.py  test_dopplerfile.py  test_state.py
python/doppler/: __init__.py  dp_accumulator.pyi  dp_buffer.pyi  dp_delay.pyi  dp_fft.pyi  dp_nco.pyi  dp_stream.pyi
python/doppler/accumulator/: __init__.py  _accumulator.pyi
python/doppler/buffer/: __init__.py
python/doppler/delay/: __init__.py
python/doppler/examples/: hbdecim_demo.py  zmq_stream_demo.py
python/doppler/fft/: __init__.py  _fft.py
python/doppler/nco/: _nco.pyi
python/doppler/polyphase/: __init__.py  __main__.py  _dpmfs.py  _polyphase.py  matlab_optimization.py
python/doppler/resample/: __init__.py  _hbdecim.pyi  reference.py
python/doppler/specan/: __init__.py  __main__.py  server.py  signal.py
python/doppler/specan/static/: index.html
python/doppler/stream/: _stream.pyi
python/doppler/tests/: test_cross_language.py  test_dpmfs.py  test_fft.py  test_nco.py  test_opt_example.py  test_optimize_dpmfs.py  test_polyphase.py  test_resamp_c.py  test_resampler.py
python/doppler/window/: __init__.py  _window.pyi
python/dsp/doppler/: __init__.py
python/dsp/doppler/accumulator/: __init__.py
python/dsp/doppler/bench/: bench_fft.py
python/dsp/doppler/buffer/: _buffer.pyi
python/dsp/doppler/ddc/: __init__.py  _ddc.pyi
python/dsp/doppler/delay/: __init__.py  _delay.pyi
python/dsp/doppler/examples/: ctypes_demo.py  demo_fft.py  nco_demo.py
python/dsp/doppler/fft/: __init__.py
python/ext/: _accumulator.c  _buffer.c  _ddc.c  _delay.c  _fft.c  _hbdecim.c  _nco.c  _resamp.c  _resamp_dpmfs.c  _stream.c  dp_accumulator.c  dp_buffer.c  dp_delay.c  dp_fft.c  dp_nco.c  dp_resamp.c  dp_resamp_dpmfs.c  dp_stream.c  dp_window.c
python/specan/: pyproject.toml
python/specan/doppler_specan/: __init__.py  __main__.py  config.py  engine.py  record_demo.py  server.py  source.py  terminal.py
(+3487 files in other folders)
